zipwhip christmas party changes

--- a/public/templates/booth.html
+++ b/public/templates/booth.html
@@ -14,5 +14,5 @@
 
 <script>
 // Lauer Halloween Party 2017 background
-$('body').css('background-image', 'url(/images/LAUER-background-EMPTY.png)');
+// $('body').css('background-image', 'url(/images/LAUER-background-EMPTY.png)');
 </script>
