--- a/public/templates/display.html
+++ b/public/templates/display.html
@@ -51,7 +51,7 @@
 
 	$('#audio-selfie').hide();
 
-	$('body').css('background-image', 'url(/images/getdown-display.jpg)');
+	// $('body').css('background-image', 'url(/images/getdown-display.jpg)');
 	
 setInterval(function(){
 	$.get('/total')
