--- a/public/templates/phone.html
+++ b/public/templates/phone.html
@@ -65,5 +65,5 @@
 
 <script>
 // Lauer Halloween Party 2017 background
-$('body').css('background-image', 'url(/images/LAUER-background-PHONE.png)');
+// $('body').css('background-image', 'url(/images/LAUER-background-PHONE.png)');
 </script>
