--- a/public/templates/start.html
+++ b/public/templates/start.html
@@ -52,6 +52,6 @@
 	// $('body').css('background-image', 'url(/images/bigT.jpg)');
 
 	// Lauer Halloween Party 2017 background
-	$('body').css('background-image', 'url(/images/LAUER-background.png)');
+	// $('body').css('background-image', 'url(/images/LAUER-background.png)');
 
 </script>
